# SmartHomeController

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.b42432e
qml/: main.qml  resources.qrc.txt
src/: CMakeLists.txt  main.cpp
